# anstyle

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  typos.toml
.github/: renovate.json5  settings.yml
.github/workflows/: audit.yml  ci.yml  committed.yml  pre-commit.yml  rust-next.yml  spelling.yml  template.yml
crates/ansi-term/: CHANGELOG.md  Cargo.toml  README.md
crates/anstream/: CHANGELOG.md  Cargo.toml  README.md
crates/anstream/benches/: stream.rs  strip.rs  wincon.rs
crates/anstream/examples/: dump-stream.rs
crates/anstream/src/: _macros.rs  auto.rs  buffer.rs  fmt.rs  is_terminal.rs  lib.rs  lockable.rs  macros.rs  stream.rs  strip.rs  wincon.rs
crates/anstream/src/adapter/: strip.rs  wincon.rs
crates/anstream/tests/: macros.rs  rg_help.vte
crates/anstyle/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-ansi-term/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-ansi-term/src/: lib.rs
crates/anstyle-crossterm/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-crossterm/src/: lib.rs
crates/anstyle-git/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-git/src/: lib.rs
crates/anstyle-hyperlink/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-hyperlink/src/: file.rs  hostname.rs  hyperlink.rs  lib.rs
crates/anstyle-lossy/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-lossy/src/: lib.rs  palette.rs
crates/anstyle-ls/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-ls/src/: lib.rs
crates/anstyle-owo-colors/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-owo-colors/src/: lib.rs
crates/anstyle-parse/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-parse/benches/: parse.rs
crates/anstyle-parse/examples/: parselog.rs
crates/anstyle-parse/src/: codegen.rs  definitions.rs  lib.rs  table.rs
crates/anstyle-parse/src/state/: codegen.rs  definitions.rs  mod.rs  table.rs
crates/anstyle-parse/tests/: testsuite.proptest-regressions  testsuite.rs
crates/anstyle-progress/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-progress/src/: lib.rs  progress.rs  query.rs
crates/anstyle-query/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-query/src/: lib.rs  windows.rs
crates/anstyle-ratatui/: CHANGELOG.md  Cargo.toml  README,md  README.md
crates/anstyle-ratatui/src/: lib.rs
crates/anstyle-roff/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-roff/src/: lib.rs  roff_styles.rs  style_stream.rs  styled_str.rs
crates/anstyle-roff/tests/: test_roff.rs
crates/anstyle-roff/tests/roffs/: ansi_color.roff  bold.roff  bright_ansi_colors.roff  italic.roff  rgb_color.roff
crates/anstyle-stream/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-stream/benches/: stream.rs  strip.rs  wincon.rs
crates/anstyle-stream/src/: auto.rs  buffer.rs  lib.rs  lockable.rs  macros.rs  raw.rs  strip.rs  wincon.rs
crates/anstyle-stream/src/adapter/: mod.rs  strip.rs  wincon.rs
crates/anstyle-svg/: CHANGELOG.md  Cargo.toml  README.md  rainbow.sh
crates/anstyle-svg/src/: adapter.rs  lib.rs
crates/anstyle-svg/tests/: custom_background_color.html  custom_background_color.vte  hyperlink-demo.html  hyperlink-demo.vte  rainbow.html  rainbow.vte  rg_linus.html  rg_linus.vte  sgr_off_codes.html  sgr_off_codes.vte  term.rs  underline_color_reset.html  underline_color_reset.vte  underline_subparams.html  underline_subparams.vte
crates/anstyle-syntect/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-syntect/src/: lib.rs
crates/anstyle-termcolor/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-termcolor/src/: lib.rs
crates/anstyle-wincon/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-wincon/examples/: dump-wincon.rs  dump.rs  set-wincon.rs  set.rs
crates/anstyle-wincon/src/: console.rs  lib.rs  stream.rs  windows.rs
crates/anstyle-yansi/: CHANGELOG.md  Cargo.toml  README.md
crates/anstyle-yansi/src/: lib.rs
crates/anstyle/examples/: dump-style.rs  dump.rs
crates/anstyle/src/: color.rs  effect.rs  lib.rs  reset.rs  style.rs
crates/anstyle/tests/: no_leading_zero.vte  testsuite.rs
crates/colorchoice/: CHANGELOG.md  Cargo.toml
crates/colorchoice-clap/: CHANGELOG.md  Cargo.toml  README.md
crates/colorchoice-clap/src/: lib.rs
crates/colorchoice/src/: lib.rs
crates/crossterm/: Cargo.toml  README.md
crates/git/: CHANGELOG.md  Cargo.toml  README.md
crates/git/src/: lib.rs
crates/lossy/: CHANGELOG.md  Cargo.toml
crates/lossy/src/: lib.rs
crates/ls/: Cargo.toml
crates/ls/src/: lib.rs
crates/owo/: CHANGELOG.md  Cargo.toml  README.md
crates/owo/src/: lib.rs
crates/termcolor/: CHANGELOG.md  Cargo.toml  README.md
crates/termcolor/src/: lib.rs
crates/yansi/: CHANGELOG.md  Cargo.toml  README.md
crates/yansi/src/: lib.rs
examples/: parselog.rs
src/: color.rs  effect.rs  lib.rs  reset.rs  style.rs
