[package]
authors = ["Joe Wilm <joe@jwilm.com>", "Christian Duerr <contact@christianduerr.com>"]
description = "Parser for implementing terminal emulators"
repository = "https://github.com/alacritty/vte"
documentation = "https://docs.rs/vte/"
keywords = ["ansi", "vte", "parser", "terminal"]
categories = ["parsing", "no-std"]
exclude = ["/.travis.yml"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
version = "0.11.0"
name = "vte"
edition = "2021"
rust-version = "1.56.0"

[dependencies]
vte_generate_state_changes = { version = "0.1.0" }
arrayvec = { version = "0.7.2", default-features = false, optional = true }
utf8parse = { version = "0.2.0" }

[features]
default = ["no_std"]
no_std = ["arrayvec"]
nightly = ["utf8parse/nightly"]
