[package]
name = "anstyle-git"
version = "0.2.2"
description = "Parse Git Style Descriptions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/anstyle.git"
homepage = "https://github.com/rust-cli/anstyle"
categories = ["command-line-interface"]
keywords = ["ansi", "terminal", "color", "git", "colorparse"]
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]
edition = "2021"
rust-version = "1.56.0"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/anstyle/compare/{{tag_name}}...HEAD", exactly=1},
]


[dependencies]
anstyle = { version = "0.2.0", path = "../anstyle" }
