[package]
name = "anstyle-hyperlink"
version = "1.0.2"
description = "ANSI escape code hyperlinks (OSC 8)"
categories = ["command-line-interface"]
keywords = ["ansi", "terminal", "color", "no_std"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/anstyle/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = ["std"]
std = []
file = ["std", "dep:percent-encoding", "dep:libc"]

[dependencies]
libc = { version = "0.2.180", optional = true }
percent-encoding = { version = "2.3.2", optional = true }

[dev-dependencies]
snapbox = "0.6.23"

[lints]
workspace = true
