[package]
name = "anstyle-stream"
version = "0.1.0"
description = "A simple cross platform library for writing colored text to a terminal."
repository = "https://github.com/rust-cli/anstyle.git"
homepage = "https://github.com/rust-cli/anstyle"
categories = ["command-line-interface"]
keywords = ["ansi", "terminal", "color"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/anstyle/compare/{{tag_name}}...HEAD", exactly=1},
]


[dependencies]
anstyle = { version = "0.2.5", path = "../anstyle" }
anstyle-parse = { version = "0.1.0", path = "../anstyle-parse", default-features = false }

[dev-dependencies]
criterion = "0.4.0"
proptest = "1.1.0"
strip-ansi-escapes = "0.1.1"
anstyle-parse = { version = "0.1.0", path = "../anstyle-parse", default-features = false, features = ["utf8"] }

[[bench]]
name = "strip"
harness = false
