[package]
name = "anstyle-syntect"
version = "1.0.4"
description = "Adapt between syntect and anstyle"
categories = ["command-line-interface"]
keywords = ["ansi", "terminal", "color", "syntect"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/anstyle/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
anstyle = { version = "1.0.0", path = "../anstyle" }
syntect = { version = "5.2.0", default-features = false }

[target.'cfg(any())'.dependencies]
thiserror = "1.0.2"  # HACK: bad minimal dep in syntect
same-file = "1.0.6"  # HACK: bad mininal dep somewhere

[lints]
workspace = true
